[package]
name = "gen"
version = "0.1.0"
authors = ["Hackzzila <admin@hackzzila.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clang = { version = "0.23.0", features = ["clang_7_0"] }
quote = "1.0"
proc-macro2 = "1.0.17"
rand = "0.7.3"
cc = "1.0"
